<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"        
    android:orientation="vertical">
    
    <EditText
        android:id="@+id/myFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_hint">

        <requestFocus />
    </EditText>
    
	<LinearLayout 
	    android:id="@+id/group"
		android:layout_width="wrap_content"
      	android:layout_height="wrap_content">
    	   	    
	    <Button
	        android:id="@+id/add"
	        android:drawableLeft="@drawable/add_icon"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:text="@string/button_add"	        
	        android:onClick="onClick">	       
	    </Button>	
	    
	    <Button
	        android:id="@+id/del"	  
	        android:drawableLeft="@drawable/trash_icon"      
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_del"
	        android:onClick="onClick">	        
	    </Button>
    
	</LinearLayout>
	
		<ListView android:id="@android:id/list"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">        
	    </ListView>
	    
	    <TextView android:id="@android:id/empty"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	             
	        android:text="@string/no_tasks">
	    </TextView>

</LinearLayout>